--- a/Index.html
+++ b/Index.html
@@ -34,5 +34,6 @@
       </div>
       <button id="download-button">Download PDF</button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
